Program doesn't crash
Added setContextView()
Program Doesn't Crash!

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -103,6 +103,7 @@
         android:layout_above="@+id/button7"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="43dp"
-        android:text="@string/DisplayBox" />
+        android:text="@string/DisplayBox"
+         />
 
 </RelativeLayout>
